QosException reasons are included in args